- Updated DashboardController to include 'includeExplainability' parameter. - Modified DashboardService to handle explainability logic based on the new parameter. - Implemented logging in MockExplainabilityProvider and PythonExplainabilityProvider for better traceability. - Added configuration for RestTemplate to facilitate explainability service calls. - Updated application.yml to include explainability service configuration.